fixed the option to set the job position for the member